fix unreachable menu items on mobile
closes #5229

--- a/src/main/css/bundles/style.css
+++ b/src/main/css/bundles/style.css
@@ -31,6 +31,11 @@
 @import "../components/settings-absence-types.css" layer(components);
 
 @layer base {
+  :root {
+    /* info-banner is optional and value is overridden by javascript with real height on runtime. as we don't know the content yet... */
+    --info-banner-height: 0;
+  }
+
   html {
     height: -webkit-fill-available;
   }
